WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217246
TranslateTransformOperation shouldn't take in a FloatSize to convert z as a double
https://bugs.webkit.org/show_bug.cgi?id=217246
Summary
TranslateTransformOperation shouldn't take in a FloatSize to convert z as a d...
Antoine Quint
Reported
2020-10-02 13:09:00 PDT
TranslateTransformOperation shouldn't take in a FloatSize to convert z as a double
Attachments
Patch
(5.10 KB, patch)
2020-10-02 13:11 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch
(5.09 KB, patch)
2020-10-19 12:03 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2020-10-02 13:11:23 PDT
Created
attachment 410358
[details]
Patch
Darin Adler
Comment 2
2020-10-02 13:17:40 PDT
Comment on
attachment 410358
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=410358&action=review
> Source/WebCore/platform/graphics/transforms/TranslateTransformOperation.h:53 > + double xAsDouble(const FloatSize& borderBoxSize) const { return floatValueForLength(m_x, borderBoxSize.width()); } > + double yAsDouble(const FloatSize& borderBoxSize) const { return floatValueForLength(m_y, borderBoxSize.height()); } > + double zAsDouble() const { return floatValueForLength(m_z, 1); }
Strange mix here. We are calling something that computes a float, then converting it to a double when returning it, then it seems 2 of the 3 call sites call narrowPrecisionToFloat on a value that was just converted *from* a float. Maybe this should return float, not double?
Radar WebKit Bug Importer
Comment 3
2020-10-09 13:09:14 PDT
<
rdar://problem/70150086
>
Antoine Quint
Comment 4
2020-10-19 12:03:27 PDT
Created
attachment 411771
[details]
Patch
Antoine Quint
Comment 5
2020-10-19 23:20:14 PDT
Committed
r268714
: <
https://trac.webkit.org/changeset/268714
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug