Source/WebCore/platform/graphics/transforms/TranslateTransformOperation.h
@@ -48,9 +48,9 @@ public:
         return adoptRef(*new TranslateTransformOperation(m_x, m_y, m_z, type()));
     }
 
-    double x(const FloatSize& borderBoxSize) const { return floatValueForLength(m_x, borderBoxSize.width()); }
-    double y(const FloatSize& borderBoxSize) const { return floatValueForLength(m_y, borderBoxSize.height()); }
-    double z(const FloatSize&) const { return floatValueForLength(m_z, 1); }
+    float xAsFloat(const FloatSize& borderBoxSize) const { return floatValueForLength(m_x, borderBoxSize.width()); }
+    float yAsFloat(const FloatSize& borderBoxSize) const { return floatValueForLength(m_y, borderBoxSize.height()); }
+    float zAsFloat() const { return floatValueForLength(m_z, 1); }
 
     Length x() const { return m_x; }
     Length y() const { return m_y; }
@@ -58,7 +58,7 @@ public:
 
     bool apply(TransformationMatrix& transform, const FloatSize& borderBoxSize) const final
     {
-        transform.translate3d(x(borderBoxSize), y(borderBoxSize), z(borderBoxSize));
+        transform.translate3d(xAsFloat(borderBoxSize), yAsFloat(borderBoxSize), zAsFloat());
         return m_x.isPercent() || m_y.isPercent();
     }
 
